<resources>
    <string name="app_name">${app.name}</string>
    <string name="common_ok">OK</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_yes">Yes</string>
    <string name="common_no">No</string>
    <string name="common_decline">Decline</string>
    <string name="common_accept">Accept</string>
    <string name="common_delete">Delete</string>
    <string name="no_connection_available">No connection available.</string>
    <string name="menu_my_profile">My profile</string>
    <string name="menu_pair">Add contacts</string>
    <string name="menu_group_profile_add_person">Add contact</string>
    <string name="menu_new_group">Create group</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_music_viewer">Media</string>
    <string name="menu_about">About ${app.name}</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_tutorial">Tutorial</string>
    <string name="menu_reconnect">Reconnect</string>
    <string name="menu_clear_conversation">Clear conversation</string>
    <string name="menu_contacts">Contacts</string>
    <string name="link_tutorial">http://faq.hoccer.com/tutorial-xo/</string>
    <string name="link_faq">http://faq.hoccer.com/</string>
    <string name="contacts_title">Contacts</string>
    <string name="blocked_contact">Blocked contact</string>
    <string name="friend_request_decline_invitation_title">Decline invitation?</string>
    <string name="friend_request_decline_invitation_message">Do you really want to decline the invitation from %1$s?</string>
    <plurals name="groups_and_x_more">
        <item quantity="one">and one more</item>
        <item quantity="other">and %1$d more</item>
    </plurals>
    <string name="group_request_decline_invitation_title">Decline group invitation?</string>
    <string name="group_request_decline_invitation_message">Do you really want to decline the group invitation?</string>
    <string name="dialog_attachment_delete_title">Delete attachment</string>
    <string name="dialog_attachment_delete_message">Delete selected attachments and related chat messages?</string>
    <string name="deleted_attachment">[Deleted Attachment]</string>
    <string name="menu_search">Search</string>
    <string-array name="delete_options">
        <item>Remove from collection</item>
        <item>Delete file</item>
    </string-array>
    <string name="dialog_enable_location_service_title">Location services</string>
    <string name="dialog_enable_location_service_message">This feature uses location services
        (GPS or Network location). Do you want to enable it?</string>
    <string name="dialog_confirm_nearby_deletion_title">Confirm deletion</string>
    <string name="dialog_confirm_nearby_deletion_message">Do you really want to delete messages from this group?</string>
    <string name="multi_invitation_button">continue</string>
    <string name="contact_name_new_client">New friend</string>
    <string name="contact_name_new_group">New group</string>
    <string name="contact_role_owner">Owner</string>
    <string name="composition_text_hint">Type message</string>
    <string name="dialog_empty_group_title">Can not send message</string>
    <string name="dialog_empty_group_message">You can not send a message to this group because there are no members except you. Start inviting friends to this group.</string>
    <string name="attachment_over_limit_title">Really send message?</string>
    <string name="attachment_over_limit_upload_question">Attachment size is %1$s. Do you really want to send this message?</string>
    <string name="attachment_over_limit_confirm">Send</string>
    <string name="attachment_on_hold_download_question">Download %1$s?</string>
    <string name="attachment_encoding_error">Error while encoding file. Cannot send attachment.</string>
    <string name="messaging_loading">Loading…</string>
    <string name="messaging_no_messages">No Messages</string>
    <string name="context_menu_copy_message">Copy</string>
    <string name="context_menu_delete_message">Delete</string>
    <string name="toast_pairing_successful">You are friends now.</string>
    <string name="toast_pairing_failed">Incorrect code, please try again.</string>
    <string name="dialog_add_contact_type_title">Add contact</string>
    <string name="dialog_add_contact_type_sms_item">SMS</string>
    <string name="dialog_add_contact_type_mail_item">E-Mail</string>
    <string name="dialog_add_contact_type_code_item">Code</string>
    <string name="dialog_missing_pairing_token_title">Cannot create invitation</string>
    <string name="dialog_missing_pairing_token_message">Please try again later.</string>
    <string name="pairing_token_generation_failed">Failed to generate QR code.</string>
    <string name="pairing_token_generation_retry">Retry</string>
    <string name="scan_or_copy_code">Scan or copy this code</string>
    <string name="enter_code">Enter code</string>
    <string name="invite_code">enter invitation code</string>
    <string name="dialog_avatar_options_title">Avatar options</string>
    <string name="dialog_set_avatar_option">Change avatar</string>
    <string name="dialog_delete_avatar_option">Delete avatar</string>
    <string name="profile_name_title">Name</string>
    <string name="profile_name_hint">Your name</string>
    <string name="profile_contacts_title">Contacts</string>
    <plurals name="profile_contacts_text_friends">
        <item quantity="one">friend</item>
        <item quantity="other">friends</item>
    </plurals>
    <plurals name="profile_contacts_text_groups">
        <item quantity="one">group</item>
        <item quantity="other">groups</item>
    </plurals>
    <string name="profile_user_block_button">Block this user</string>
    <string name="profile_user_unblock_button">Unblock this user</string>
    <string name="profile_user_delete_button">Delete this user</string>
    <string name="profile_user_name_unknown">unknown</string>
    <string name="profile_self_initial_name">anonymous</string>
    <string name="friend_request_add_as_friend">Add as a friend</string>
    <string name="friend_request_cancel_invitation">Cancel invitation</string>
    <string name="friend_request_accept_invitation">Accept invitation</string>
    <string name="friend_request_decline_invitation">Decline invitation</string>
    <string name="friend_request_invite_send">Invite sent</string>
    <string name="group_name_hint">Group name</string>
    <string name="profile_group_members_title">Members</string>
    <string name="profile_group_create_button">Create group</string>
    <string name="message_text">Your message text</string>
    <string name="unseen_messages_notification_text">\u0020new messages</string>
    <string name="content_image">Image</string>
    <string name="content_multi_images">Multiple images</string>
    <string name="content_video">Video</string>
    <string name="content_capture">Take photo</string>
    <string name="content_audio">Audio</string>
    <string name="content_contact">Contact</string>
    <string name="content_location">Location</string>
    <string name="content_file">File</string>
    <string name="content_clipboard">Clipboard</string>
    <string name="deleted_contact_name">Removed Contact</string>
    <string name="select_attachment">Select attachment</string>
    <string name="dialog_delete_contact_title">Delete contact?</string>
    <string name="dialog_delete_contact_message">Are you sure you want to delete this contact?</string>
    <string name="dialog_discard_contact_title">Remove contact?</string>
    <string name="dialog_discard_contact_message">Are you sure you want to remove this contact? All messages
        from and to this contact will be deleted.</string>
    <string name="dialog_delete_account_warning">Do you really want to delete your Account? All your contacts, group memberships and your account will be gone for good. The data already on your phone will also be affected.</string>
    <string name="button_delete_account_title">Delete account on server</string>
    <string name="dialog_delete_account_ok">Delete</string>
    <string name="manage_group_members">Manage group members</string>
    <string name="selectlocation_title">Select location</string>
    <string name="select_images_title">Select images</string>
    <string name="select_count">Select (%1$s)</string>
    <string name="dialog_delete_group_title">Delete group</string>
    <string name="dialog_delete_group_message">Are you sure you want to delete this group?</string>
    <string name="dialog_remove_group_title">Remove group</string>
    <string name="dialog_remove_group_message">Are you sure you want to remove this group?</string>
    <string name="dialog_leave_group_title">Leave group</string>
    <string name="dialog_leave_group_message">Are you sure you want to leave this group? You will have to be
        reinvited to participate again.
    </string>
    <string name="state_invited">Invited</string>
    <string name="state_friend">Friend</string>
    <string name="menu_licenses">Licenses</string>
    <string name="file_chooser_string">Choose a file to attach</string>
    <string name="error_no_videoplayer">Can\'t handle video. Please try another videoplayer.
    </string>
    <string name="menu_group_delete_profile">Close group</string>
    <string name="menu_group_edit_profile">Edit group</string>
    <string name="menu_group_profile_leave">Leave group</string>
    <string name="menu_group_profile_permanent">Create permanent group</string>
    <string name="menu_group_remove">Remove group</string>
    <string name="location">Location</string>
    <string name="show_location_instruction">Use button to show on map</string>
    <string name="vcard_description">With all contact details</string>
    <string name="profile_name_text">Name</string>
    <string name="profile_key_text">Key</string>
    <string name="transfer_state_initializing_download">Waiting for download..</string>
    <string name="transfer_state_initializing_upload">Waiting to upload..</string>
    <string name="transfer_state_initialized_upload">Starting upload..</string>
    <string name="transfer_state_encrypting">Encrypting..</string>
    <string name="transfer_state_decrypting">Decrypting..</string>
    <string name="transfer_state_downloading">Downloading..</string>
    <string name="transfer_state_uploading">Uploading..</string>
    <string name="transfer_state_pause">Paused</string>
    <string name="transfer_state_downloading_failed">Download failed</string>
    <string name="add_to_collection">Add to collection</string>
    <string name="share_with_contact">Share</string>
    <string name="preference_keysize_summary">Renew RSA key with selected size</string>
    <string name="preference_keysize_title">RSA key size</string>
    <string name="pref_confirm_messages_seen">Confirm seen messages</string>
    <string name="pref_credentials">Credentials</string>
    <string name="pref_export_credentials">Export credentials</string>
    <string name="pref_import_credentials">Import credentials</string>
    <string name="pref_legal_information">Legal information</string>
    <string name="pref_about_information">About</string>
    <string name="pref_encryption">Encryption</string>
    <string name="pref_privacy_title">Privacy</string>
    <string name="new_profile">New profile</string>
    <string name="existing_hoccer_xo">Hey, we\'ve found an existing Hoccer XO version.</string>
    <string name="update_and_import_profile">You can import your old profile but you have to update Hoccer XO first.</string>
    <string name="update_hoccer_xo">Update Hoccer XO</string>
    <string name="set_password">Set your password</string>
    <string name="password_note">Please note, that we cannot reset or restore your password.</string>
    <string name="new_password">New password</string>
</resources>