<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="@string/pref_about_information">
        <Preference
                android:title="@string/menu_about"
                android:key="preference_about">
            <intent android:targetClass="com.hoccer.xo.android.activity.LegalImprintActivity"
                    android:targetPackage="com.hoccer.xo.release"
                    android:action="android.intent.action.VIEW">
                <extra android:name="xo_legal_imprint_display_mode" android:value="1"></extra>
            </intent>
        </Preference>
        <Preference
                android:title="@string/menu_faq"
                android:key="preference_faq">
            <intent android:targetClass="com.hoccer.xo.android.activity.FaqTutorialActivity"
                    android:targetPackage="com.hoccer.xo.release"
                    android:action="android.intent.action.VIEW">
                <extra android:name="URL" android:value="@string/link_faq"></extra>
            </intent>
        </Preference>
        <Preference
                android:title="@string/menu_tutorial"
                android:key="preference_tutorial">
            <intent android:targetClass="com.hoccer.xo.android.activity.FaqTutorialActivity"
                    android:targetPackage="com.hoccer.xo.release"
                    android:action="android.intent.action.VIEW">
                <extra android:name="URL" android:value="@string/link_tutorial"></extra>
            </intent>
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/pref_auto_download">

        <CheckBoxPreference
                android:key="preference_download_auto_mobile"
                android:title="@string/pref_auto_downloads_mobile"
                android:defaultValue="false"/>

        <CheckBoxPreference
                android:key="preference_download_auto_wifi"
                android:title="@string/pref_auto_download_wifi"
                android:defaultValue="true"/>

    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/pref_privacy_title">

        <CheckBoxPreference
                android:key="preference_confirm_messages_seen"
                android:title="@string/pref_confirm_messages_seen"
                android:defaultValue="true"/>

    </PreferenceCategory>


    <PreferenceCategory
            android:title="@string/pref_credentials">
        <Preference
                android:title="@string/pref_export_credentials"
                android:key="preference_export">
        </Preference>
        <Preference
                android:title="@string/pref_import_credentials"
                android:key="preference_import">
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/pref_encryption">

        <ListPreference
                android:key="preference_keysize"
                android:entries="@array/keysizes"
                android:summary="@string/preference_keysize_summary"
                android:entryValues="@array/keysize_values"
                android:title="@string/preference_keysize_title"
                android:defaultValue="2048"/>

    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/pref_legal_information">
        <Preference
                android:title="@string/menu_licenses"
                android:key="preference_licenses">
            <intent android:targetClass="com.hoccer.xo.android.activity.LegalImprintActivity"
                    android:targetPackage="com.hoccer.xo.release"
                    android:action="android.intent.action.VIEW">
                <extra android:name="xo_legal_imprint_display_mode" android:value="2"></extra>
            </intent>
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/pref_crash_report">

        <CheckBoxPreference
                android:key="preference_crash_report"
                android:title="@string/pref_crash_report_switcher"
                android:defaultValue="false"/>
    </PreferenceCategory>

</PreferenceScreen>
