<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="@string/pref_auto_download">

        <CheckBoxPreference
                android:key="preference_download_auto_mobile"
                android:title="@string/pref_auto_downloads_mobile"
                android:defaultValue="false"/>

        <CheckBoxPreference
                android:key="preference_download_auto_wifi"
                android:title="@string/pref_auto_download_wifi"
                android:defaultValue="true"/>

    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/pref_privacy_title">

        <CheckBoxPreference
                android:key="preference_confirm_messages_seen"
                android:title="@string/pref_confirm_messages_seen"
                android:defaultValue="true"/>

    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/pref_credentials">
        <Preference
                android:title="@string/pref_export_credentials"
                android:key="preference_export">
        </Preference>
        <Preference
                android:title="@string/pref_import_credentials"
                android:key="preference_import">
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/pref_encryption">

        <ListPreference
                android:key="preference_keysize"
                android:entries="@array/keysizes"
                android:summary="@string/preference_keysize_summary"
                android:entryValues="@array/keysize_values"
                android:title="@string/preference_keysize_title"
                android:defaultValue="2048"/>

    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/pref_legal_information">
        <Preference
                android:title="@string/menu_about"
                android:key="preference_about">
        </Preference>
        <Preference
                android:title="@string/menu_licenses"
                android:key="preference_licenses">
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory
            android:title="Development">

        <ListPreference
                android:key="preference_data_import"
                android:title="Import data ..."
                android:defaultValue="0"/>

        <Preference
                android:key="preference_data_export"
                android:title="Export data"/>

        <CheckBoxPreference
                android:key="preference_environment_update"
                android:title="Enable environment updates"
                android:defaultValue="true"/>
    </PreferenceCategory>

</PreferenceScreen>
