<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/menu_group_profile_leave"
            android:title="@string/menu_group_profile_leave"
            android:icon="@drawable/ic_action_leave"
            android:visible="false"
            android:showAsAction="always"
            android:orderInCategory="240"/>

    <item
            android:id="@+id/menu_group_profile_edit"
            android:title="@string/menu_group_edit_profile"
            android:icon="@drawable/ic_action_edit"
            android:visible="true"
            android:showAsAction="always"
            android:orderInCategory="250"/>

    <item android:id="@+id/menu_group_profile_remove"
          android:title="@string/menu_group_remove"
          android:icon="@drawable/ic_action_delete"
          android:visible="false"
          android:showAsAction="ifRoom"
          android:orderInCategory="260" />

    <item android:id="@+id/menu_group_profile_request_friends"
          android:title="@string/menu_group_remove"
          android:visible="false"
          android:showAsAction="never"
          android:orderInCategory="1000" />
</menu>
