<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginLeft="10dp"
              android:layout_marginRight="10dp">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/existing_hoccer_xo"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            style="@style/ParagraphText"/>

    <TextView
            android:id="@+id/tv_import_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_and_import_profile"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            style="@style/ParagraphText"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

        <Button
                android:id="@+id/btn_open_playstore"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/update_hoccer_xo"/>

        <Button
                android:id="@+id/btn_create_new_client"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/new_profile"
                style="@style/ButtonGrayAppBaseTheme"/>

    </LinearLayout>

</LinearLayout>
