<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_vertical"
              android:background="@color/background_default">

    <LinearLayout android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:paddingLeft="40dp"
                  android:paddingRight="40dp">

        <EditText android:id="@+id/et_enter_passcode"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="textPassword"
                  android:hint="@string/new_password"/>

        <EditText android:id="@+id/et_confirm_passcode"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:focusable="false"
                  android:focusableInTouchMode="false"
                  android:inputType="textPassword"/>

        <Button android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_password"
                android:enabled="false"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/password_note"
                  android:paddingLeft="4dp"/>
    </LinearLayout>
</LinearLayout>