<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="@color/background_default"
        android:orientation="vertical"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <ImageView
            android:id="@+id/profile_group_profile_image"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/avatar_default_group_large"
            style="@style/AppBaseTheme.Group.ProfilePicture"/>

    <TextView
            android:id="@+id/profile_group_name_title"
            android:text="@string/profile_name_title"
            android:gravity="left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppBaseTheme.Group.Title"/>

    <View
            android:layout_width="fill_parent"
            style="@style/AppBaseTheme.Group.HorizontalDivider"/>

    <EditText
            android:id="@+id/profile_group_name_edit"
            android:hint="@string/group_name_hint"
            android:textColorHint="@color/text_hint"
            android:gravity="left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:lines="1"
            android:inputType="text|textNoSuggestions"
            android:focusableInTouchMode="true"
            android:maxLength="25"
            style="@style/AppBaseTheme.Group.Name"/>

    <Button
            android:id="@+id/profile_group_button_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/profile_group_create_button"
            android:enabled="false"
            style="@style/AppBaseTheme.Group.CreateButton"/>

    <LinearLayout
            android:id="@+id/profile_group_members_container"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        <TextView
                android:id="@+id/profile_group_members_title"
                android:text="@string/profile_group_members_title"
                android:gravity="left"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AppBaseTheme.Group.Members.Title"/>

        <View
                android:layout_width="fill_parent"
                style="@style/AppBaseTheme.Group.HorizontalDivider"/>

        <ListView
                android:id="@+id/profile_group_members_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AppBaseTheme.Group.List"/>
    </LinearLayout>

</LinearLayout>
