<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:custom="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

    <com.hoccer.xo.android.view.AvatarView
            android:id="@+id/contact_icon"
            android:clickable="false"
            android:layout_width="48dp"
            android:layout_height="48dp"
            custom:cornerRadius="65"
            custom:defaultAvatarImageUrl="@drawable/avatar_default_contact"
            style="@style/AppBaseTheme.Contact.Avatar"/>

    <TextView
            android:id="@+id/contact_name"
            android:text="@string/contact_name_new_client"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="85dp"
            android:layout_toRightOf="@id/contact_icon"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            style="@style/AppBaseTheme.Contact.Name"/>

    <LinearLayout
            android:id="@+id/ll_invited_me"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginRight="5dp"
            android:layout_toRightOf="@+id/contact_icon"
            android:layout_below="@+id/contact_name"
            android:orientation="horizontal"
            android:visibility="gone">

        <Button
                android:id="@+id/btn_decline"
                android:text="@string/common_decline"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/ButtonGrayAppBaseTheme"/>

        <Button
                android:id="@+id/btn_accept"
                android:text="@string/common_accept"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/ButtonAppBaseTheme"/>

    </LinearLayout>

    <TextView
            android:id="@+id/tv_is_invited"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/contact_icon"
            android:layout_below="@+id/contact_name"
            android:text="@string/friend_request_invite_send"
            android:textSize="15dp"
            android:visibility="gone"
            style="@style/AppBaseTheme.Contact.LastMessage"/>

    <TextView
            android:id="@+id/tv_is_friend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/contact_icon"
            android:layout_below="@+id/contact_name"
            android:textSize="15dp"
            android:visibility="gone"
            style="@style/AppBaseTheme.Contact.LastMessage"/>

</RelativeLayout>
